Fixed some front page typos / minor copy tweaks

--- a/commons_project/commons_core/templates/index.html
+++ b/commons_project/commons_core/templates/index.html
@@ -21,7 +21,7 @@
             </div> <!-- end main title -->
 
 
-             <!-- end grid for twop two column headings  -->
+             <!-- end grid for top two column headings  -->
             <div class="yui3-g two_col"><!-- grid for two top columns content -->
               <div class="yui3-u-1-2">
                 <div class="left-col yui3-g">
@@ -39,7 +39,7 @@
 
                         </div>
                         <div id="eascaption" class="nivo-html-caption">
-                            <strong>The Enterprise Addressing System</strong> maps <em>street addresses</em> to city data <a href="apps/1">see more</a>.
+                            <strong>The Enterprise Addressing System</strong> maps <em>street addresses</em> to city data. <a href="apps/1">See more &raquo;</a>.
                         </div>
         
                     </div> 
@@ -50,7 +50,9 @@
                  <div class="right-col yui3-g" id="welcome_text">
                    <div class="yui3-u-1">
                      <h2 class="section_head">Sharing is good</h2>
-                    <p>The Commons Project is here! We're building a comprehensive catalog of civic technology, as well as the cities and people that rely on it. Go ahead and browse by <a href="apps">category</a>, or take a look at the <a href="j">cities</a> to see a bird's eye view of who's using what, and what they're saying about it. See something missing? Please do us a favor and add it. Have a product listed here deployed in your city? <strong>Add it.</strong> </p>
+                    <p>The Commons Project is here! We're building a comprehensive catalog of civic technology, as well as the cities and people that rely on it. Go ahead and browse by <a href="apps">category</a>, or take a look at the <a href="j">cities</a> to see a bird's eye view of who's using what, and what they're saying about it.</p>
+                    <br/>
+                    <p>See something missing? Please do us a favor and add it. Have a product listed here deployed in your city? <strong>Add it.</strong> </p>
                     <br/>
                     <p>Together, we'll transform the technology that our country runs on.</p>
                     </div>   
@@ -72,7 +74,7 @@
                 <li class="yui3-u-1-6"><div class="cat-strip-item"><a href="/apps/"><img src="{{ STATIC_URL }}/img/health.png" />Health</a></div></li>
                 <li class="yui3-u-1-6"><div class="cat-strip-item"><a href="/apps/"><img src="{{ STATIC_URL }}/img/transit.png" />Transit</a></div></li>
                 <li class="yui3-u-1-6"><div class="cat-strip-item"><a href="/apps/"><img src="{{ STATIC_URL }}/img/governance.png" />Governance</a></div></li>
-                <li class="yui3-u-1-6"><div class="cat-strip-item"><a href="/apps/"><img src="{{ STATIC_URL }}/img/map.png" />Geographic</a></div></li>
+                <li class="yui3-u-1-6"><div class="cat-strip-item"><a href="/apps/"><img src="{{ STATIC_URL }}/img/map.png" />Geography</a></div></li>
                 <li class="yui3-u-1-6"><div class="cat-strip-item"><a href="/apps/"><img src="{{ STATIC_URL }}/img/police.png" />Police</a></div></li>
                 <li class="yui3-u-1-6"><div class="cat-strip-item"><a href="/apps/"><img src="{{ STATIC_URL }}/img/fire_dept.png" />Fire</a></div></li>
             
