Removed an unnecessary period

--- a/commons_project/commons_core/templates/index.html
+++ b/commons_project/commons_core/templates/index.html
@@ -39,7 +39,7 @@
 
                         </div>
                         <div id="eascaption" class="nivo-html-caption">
-                            <strong>The Enterprise Addressing System</strong> maps <em>street addresses</em> to city data. <a href="apps/1">See more &raquo;</a>.
+                            <strong>The Enterprise Addressing System</strong> maps <em>street addresses</em> to city data. <a href="apps/1">See more &raquo;</a>
                         </div>
         
                     </div> 
