--- a/commons_project/templates/privatebeta/sent.html
+++ b/commons_project/templates/privatebeta/sent.html
@@ -1,5 +1,21 @@
 {% extends 'simple.html' %}
 
 {% block content %}
-<p>Thanks, we'll be in touch!</p>
+<div class="yui3-g two_col" id="beta-invite-content">
+    <div class="yui3-u-1-2">
+    <div class="left-col yui3-g">
+    <div class="yui3-u-1">
+    <br/>
+    </div>
+    </div>
+    </div>
+    
+    <div class="yui3-u-1-2 two-col">
+    <div class="right-col yui3-g">
+    <div class="yui3-u-1">
+    <p>Thanks, we'll be in touch!</p>
+    </div>
+    </div>
+    </div>
+</div>
 {% endblock %}
