--- a/commons_project/static/css/style.css
+++ b/commons_project/static/css/style.css
@@ -660,7 +660,43 @@ word-spacing:0;
 
 }
 
+/* private beta invite signup page styling */    
+    
+#beta-invite-content {
+    margin: 10px 0 20px 0;
+    }
+    
+#link-button {
+    background-color: #3366aa;
+    color: white;
+    font-size: 1.5em;
+    font-weight: bold;
+    display: block;
+    text-align: center;
+    padding: 10px 30px;
+    }
+#link-button:hover { 
+    background-color:#9E0B30; cursor:pointer; 
+    }
 
+#link-button:active { 
+    background-color:#9E0B30; cursor:pointer;
+    }
+    
+#id_email {
+    margin-left: 7px;
+    color:#403D3E;
+    width:250px;
+     outline:none;
+    resize:none;
+    height:1.2em;
+    padding: 10px 15px 5px 10px;
+     -webkit-border-radius: 5px;
+   -moz-border-radius: 5px;
+   border-radius: 5px;
+    }
+    
+/* end private beta stuff */
 
 .footer {
     margin: 0em 0em .2em 0em;
