Added top banner to private beta signup thank you message, so it looked less silly

--- a/commons_project/templates/privatebeta/sent.html
+++ b/commons_project/templates/privatebeta/sent.html
@@ -1,6 +1,9 @@
 {% extends 'simple.html' %}
 
 {% block content %}
+<div id="top-alert" style="display: block;">
+    <h2>Civic Commons is currently in private beta.</h2>
+</div>
 <div class="yui3-g two_col" id="beta-invite-content">
     <div class="yui3-u-1-2">
     <div class="left-col yui3-g">
