c/civic commons/the commons project

--- a/commons_project/templates/privatebeta/invite.html
+++ b/commons_project/templates/privatebeta/invite.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div id="top-alert" style="display: block;">
-    <h2>Civic Commons is currently in private beta.</h2>
+    <h2>The Commons Project is currently in private beta.</h2>
 </div>
 <div class="yui3-g two_col" id="beta-invite-content">
     <div class="yui3-u-1-2">
