--- a/commons_project/templates/userena/profile_detail.html
+++ b/commons_project/templates/userena/profile_detail.html
@@ -11,7 +11,7 @@
   {% if user.username == profile.user.username %}
   <ul id="box-nav">
     <li><a href="{% url userena_profile_detail user.username %}">{% trans "View profile" %} &raquo;</a></li>
-    <li><a href="{% url userena_profile_edit user.username %}">{% trans "Edit details" %} &raquo;</a></li>
+    <li><a href="{% url userena_profile_edit user.username %}">{% trans "Edit profile" %} &raquo;</a></li>
     <li><a href="{% url userena_password_change user.username %}">{% trans "Change password" %} &raquo;</a></li>
     <li><a href="{% url userena_email_change user.username %}">{% trans "Change email" %} &raquo;</a></li>
   </ul>
