Added template, route and view for displaying new deployment form but not processing it (thats next)

--- a/commons_project/commons_core/templates/detail.html
+++ b/commons_project/commons_core/templates/detail.html
@@ -94,7 +94,7 @@
 
             <div class="yui3-g"><!-- grid for two top columns headings -->
                 <div class="yui3-u-1"> <h2 class="section-head">Who is using the {{app.name}}?</h2></div>
-                <div class="yui3-u-1-2">
+                <div class="yui3-u-1-2"><a href="/dep/add/{{app.id}}">Add a Deployment!</a>
                     <div class="yui3-g">
                         <div class="yui3-u-1 city-viewer">
 
