adding ability to edit an application

--- a/commons_project/commons_core/templates/j_edit.html
+++ b/commons_project/commons_core/templates/j_edit.html
@@ -20,7 +20,8 @@
 				{{ form.as_p }}
 				</fieldset>
 				<input type="submit" value="Save" name="save" />
-		</form></div>
+    		</form>
+		    </div>
 
 </div> <!-- end main content area -->
 
