Added 'edit' links to cities and apps to match the deployments. Altered the URL patterns to include trailing slashes.

--- a/commons_project/commons_core/templates/detail.html
+++ b/commons_project/commons_core/templates/detail.html
@@ -12,7 +12,8 @@
                 </div>
             </div>
         
-            <div class="yui3-u-1">
+			<div class="yui3-u-1">
+				<a href="/apps/{{app.id}}/edit/">Edit</a>
                 <h1>{{ app.name }}</h1>
             </div> <!-- end app name -->
            <div class="yui3-u-1">
