--- a/commons_project/commons_core/templates/j_detail.html
+++ b/commons_project/commons_core/templates/j_detail.html
@@ -13,8 +13,9 @@
                 </div>
             </div>
         
-            <div class="yui3-u-1-2">
-                    <div class="title_image"><img src="#"/></div>
+			<div class="yui3-u-1-2">
+				<a href="/j/{{jurisdiction.id}}/edit">Edit</a>
+				<div class="title_image"><img src="#"/></div>
                     <div class="title_info">
                         <h1>{{ jurisdiction.name }}</h1>
                     </div>
