--- a/commons_project/commons_core/templates/j_edit.html
+++ b/commons_project/commons_core/templates/j_edit.html
@@ -6,7 +6,7 @@
          
 <div class="yui3-g"><!-- grid for main content area --> 
         
-            <div class="yui3-u-1-2" style="background-color: #FF6;">
+            <div class="yui3-u-1-2">
                     <div class="title_image"><img src="#"/></div>
                     <div class="title_info">
                         <h1>{{ jurisdiction.name }}</h1>
