--- a/commons_project/templates/base.html
+++ b/commons_project/templates/base.html
@@ -30,15 +30,15 @@
            {% include "nav.html" %}
        
 
-        <div class="yui3-g">
-        <div class="yui3-u-7-8">
-            <div id="breadcrumbs"><a href="#">home</a> > </div>
+        <div id="pre-content" class="yui3-g">
+            <div class="yui3-u-7-8">
+                <div id="breadcrumbs"><a href="#">home</a> > </div>
+            </div>
+            <div class="yui3-u-1-8">
+                <div id="share"><a href="#">share this!</a></div>
+            </div>
         </div>
-        <div class="yui3-u-1-8">
-            <div id="share"><a href="#">share this!</a></div>
-        </div>
-        </div>
-        <div class="yui3-g">
+        <div id="content" class="yui3-g">
         <section class="yui3-u-1" id="content-wrapper">
 
         {% block content %}{% endblock %}
@@ -47,19 +47,22 @@
         </div>
         <div class="yui3-g footer">
             <div class="yui3-u-1-12"></div>
-            <div class="yui3-u-1-3">
+            
+            <div class="yui3-u-1-3 footer-left">
                 <p>The Commons Project is a product of:</p>
             </div>
+            
                 <div class="yui3-u-1-6"></div>
-            <div class="yui3-u-1-3">
+                
+            <div class="yui3-u-1-3 footer-right">
                 <p>A collaboration led by:</p>
             </div>
             <div class="yui3-u-1-12"></div>
                 <div class="yui3-g">
                     <div class="yui3-u-1-12"></div>
-                    <div class="yui3-u-1-3"><img src="{{STATIC_URL}}/img/civiccommons.png"/></div>                    
+                    <div class="yui3-u-1-3 footer-left"><img src="{{STATIC_URL}}/img/civiccommons.png"/></div>                    
                     <div class="yui3-u-1-6"></div>
-                    <div class="yui3-u-1-3 collab">
+                    <div class="yui3-u-1-3 collab footer-right">
                      <div class="yui3-g">
                       <div class="yui3-u-1-2">
                           <img src="{{STATIC_URL}}/img/codeforamerica.png"/>
